--- a/src/styles/PokemonList.css
+++ b/src/styles/PokemonList.css
@@ -15,13 +15,14 @@ button:hover {
    width: 90%;
    justify-content: center;
    margin: 0 auto;
+   height: 80vh;
 }
 
 
 .pokemon-list {
     width: 40%;
     display: grid;
-    grid: repeat(5, 1fr) /repeat(2,1fr);
+    grid: repeat(4, 1fr) /repeat(2,1fr);
     grid-gap: 10px;
     margin-top: 2rem;
 }
@@ -30,7 +31,7 @@ button:hover {
 .pokemon-card {
     border: 2px solid grey;
     border-radius: 10px;
-    padding: 1rem 2rem;
+    padding: 0.2rem 2rem;
     margin-bottom: 1rem;
     text-transform: capitalize;
     font-weight: bold;
@@ -61,13 +62,14 @@ button:hover {
 
 .pokemon-details {
     border: 4px solid black;
-    width: 20%;
+    max-width: 20%;
     border-radius: 10px;
     margin: 5rem;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     font-family: 'Montserrat', sans-serif;
     overflow: hidden;
     min-width: 350px;
+    min-height: 320px;
     background: rgba(248, 248, 248, 0.8);
    
 }
@@ -75,8 +77,8 @@ button:hover {
 .stat-container {
     display: flex;
     justify-content: space-between;
-    padding: 0.2rem 1rem;
-    margin: 0.3rem 3rem;
+    /* padding: 0.2rem 1rem; */
+    margin: 0.4rem 4rem;  
     text-transform: capitalize;
   }
   
@@ -87,14 +89,16 @@ button:hover {
     text-transform: capitalize;
     font-weight: 900;
     background-color: rgb(97, 101, 223);
-    margin-bottom: 1.5rem;
+    margin-bottom: 0.2rem;
     font-family: 'Archivo', sans-serif;
     color: rgb(235, 236, 247);
-    font-size: 2rem;
+    font-size: 1.6rem;
+    height: 70px;
 }
 
 .pokemon-header img {
     margin-right: 2.2rem;
+    margin-left: 1rem;
 }
  
 
@@ -105,16 +109,23 @@ button:hover {
     font-size: 1rem;
   }
 
-@media (max-width: 769px) {
+@media (max-width: 844px) {
     .container {
         flex-direction: column;
-        align-items: center;  
+        height: 100vh;
+       
     }
-    .pokemon-list {
-        width: 100%
+    .pokemon-details {
+        margin-left: 0
+    }
+    .pokemon-header {
+        height: 70px;
     }
     .pokemon-card {
         padding: 0.2rem 0.5rem;
+    }
+    .stat-container {
+        margin-bottom: 0.2rem;
     }
  
 }
